src/ucb/gjdb/CommandParser.java.output
Terminals which are not used

   CHARLIT
   STRINGLIT


Grammar

    0 $accept: start $end

    1 start: command

    2 command: "run" _run_args_mode

    3 @1: /* empty */

    4 command: "run" _run_args_mode @1 run_args
    5        | "attach" address
    6        | "connect" WORD ':' connector_args
    7        | "listen" address_opt
    8        | "detach"
    9        | "print" _print_mode expr
   10        | "print" _print_mode '/' WORD expr
   11        | "print" _print_mode '/' intlit expr
   12        | "call" expr
   13        | "exec-class"
   14        | "exec-class" WORD
   15        | "exec-args" _run_args_mode

   16 @2: /* empty */

   17 command: "exec-args" _run_args_mode @2 run_args
   18        | "backtrace" WORD _check_connect
   19        | "backtrace" _check_connect
   20        | "backtrace" "all" _check_connect
   21        | "wherei" INTLIT _check_connect
   22        | "wherei" _check_connect
   23        | "wherei" "all" _check_connect
   24        | "up" intlit_dflt1 _check_connect
   25        | "down" intlit_dflt1 _check_connect
   26        | "frame" intlit _check_connect
   27        | "save"
   28        | "save" WORD expr
   29        | "ptype" expr
   30        | "dumpall" _print_mode expr
   31        | "dumpall" _print_mode '/' WORD expr
   32        | "dumpall" _print_mode '/' intlit expr
   33        | "set" "print" "compressed"
   34        | "set" "print" "pretty"
   35        | "set" "print" "elements" intlit
   36        | "set" "print" "max-frames" intlit
   37        | "set" "stdin" "on"
   38        | "set" "stdin" "off"
   39        | "set" "variable" expr
   40        | "set" WORD _collect_all_mode TEXT
   41        | "thread" thread_id _check_connect
   42        | "threadgroup" WORD _check_connect
   43        | "^F" _collect_all_mode
   44        | "^F" _collect_all_mode TEXT
   45        | "suspend" _check_connect
   46        | "suspend" thread_id_list _check_connect
   47        | "resume" _check_connect
   48        | "resume" thread_id_list _check_connect
   49        | "kill" thread_id expr
   50        | "interrupt" _check_connect
   51        | "interrupt" thread_id _check_connect
   52        | "break" _break_mode
   53        | "break" _break_mode breakpoint_spec
   54        | "clear" _break_mode delete_breakpoint_spec_list
   55        | "command"
   56        | "command" intlit
   57        | "condition" '(' _balanced_collect_mode TEXT ')'
   58        | "condition" intlit _balanced_collect_mode TEXT
   59        | "catch" _break_mode
   60        | "catch" _break_mode exception_spec
   61        | "pass" _break_mode
   62        | "pass" _break_mode exception_spec
   63        | "watch" watchpoint_spec
   64        | "unwatch" _break_mode
   65        | "unwatch" watchpoint_spec
   66        | "delete"
   67        | "delete" int_list
   68        | "ignore" intlit intlit
   69        | "trace" _check_connect suspend_policy "methods"
   70        | "trace" _check_connect suspend_policy "methods" thread_id
   71        | "untrace" _check_connect "methods"
   72        | "step" _check_connect "up"
   73        | "step" _check_connect intlit_dflt1
   74        | "finish" _check_connect
   75        | "next" _check_connect intlit_dflt1
   76        | "stepi" _check_connect intlit_dflt1
   77        | "continue" _check_connect
   78        | "exclude"
   79        | "exclude" _break_mode "none"
   80        | "exclude" _break_mode "reset"
   81        | "exclude" _break_mode '+' exclude_class_id_list
   82        | "exclude" _break_mode exclude_class_id_list
   83        | "lock" _check_connect expr
   84        | "disablegc" _check_connect expr
   85        | "enablegc" _check_connect expr
   86        | "info" "locals" _check_connect
   87        | "info" "classes"
   88        | "info" "class" _break_mode _check_connect class_id _default_mode
   89        | "info" "class" _break_mode _check_connect class_id _default_mode "all"
   90        | "info" "methods" _break_mode class_id
   91        | "info" "fields" _break_mode class_id
   92        | "info" "threads" _check_connect
   93        | "info" "threads" _check_connect WORD
   94        | "info" "threadgroups" _check_connect
   95        | "info" "classpath" _check_connect
   96        | "info" "threadlocks" _check_connect
   97        | "info" "threadlocks" _check_connect "all"
   98        | "info" "threadlocks" _check_connect thread_id
   99        | "info" "run"
  100        | "info" "break"
  101        | "info" "watch"
  102        | "info" "catch"
  103        | "info" "stack" WORD _check_connect
  104        | "info" "stack" _check_connect
  105        | "info" "stack" "all" _check_connect
  106        | "loadclass" _break_mode _check_connect class_id
  107        | "classpath" _run_args_mode
  108        | "classpath" _run_args_mode WORD
  109        | "sourcepath" _run_args_mode
  110        | "sourcepath" _run_args_mode WORD
  111        | "monitor" _balanced_collect_mode
  112        | "monitor" _balanced_collect_mode TEXT
  113        | "unmonitor" intlit
  114        | "source" _run_args_mode WORD
  115        | "list" _break_mode
  116        | "list" intlit
  117        | "list" WORD
  118        | "lines" _break_mode class_id
  119        | "lines" _break_mode class_id IDENT
  120        | "bytecodes" _break_mode _check_connect class_id IDENT
  121        | "bytecodes" _break_mode _check_connect class_id '.' IDENT
  122        | "version"
  123        | "quit"
  124        | "help"
  125        | "help" WORD
  126        | intlit _collect_all_mode TEXT

  127 intlit: INTLIT

  128 intlit_dflt1: /* empty */
  129             | INTLIT

  130 intlit_dflt_m1: /* empty */
  131               | INTLIT

  132 int_list: intlit
  133         | int_list intlit

  134 thread_id: IDENT
  135          | INTLIT

  136 thread_id_list: thread_id
  137               | thread_id_list thread_id

  138 address: intlit

  139 address_opt: intlit_dflt_m1

  140 run_args: file_specs
  141         | WORD
  142         | WORD _copy_two_back run_args

  143 file_specs: file_spec
  144           | file_specs file_spec

  145 file_spec: '<' WORD
  146          | '>' WORD
  147          | '>' '&' WORD

  148 connector_args: /* empty */
  149               | WORD

  150 formal_types_opt: /* empty */
  151                 | '(' formal_types ')'
  152                 | '(' ')'

  153 formal_types: formal_type
  154             | formal_types ',' formal_type

  155 formal_type: class_id
  156            | formal_type "[]"

  157 class_id: IDENT
  158         | class_id '.' IDENT

  159 breakpoint_spec: break_class_id '.' IDENT formal_types_opt if_clause_opt
  160                | break_class_id ':' intlit if_clause_opt

  161 delete_breakpoint_spec_list: delete_breakpoint_spec
  162                            | delete_breakpoint_spec_list delete_breakpoint_spec

  163 delete_breakpoint_spec: intlit
  164                       | break_class_id '.' IDENT formal_types_opt
  165                       | break_class_id ':' intlit

  166 break_class_id: '*' '.' IDENT
  167               | IDENT
  168               | break_class_id '.' IDENT
  169               | break_class_id ".0"

  170 exclude_class_id_list: id_pattern
  171                      | exclude_class_id_list opt_sep id_pattern

  172 opt_sep: /* empty */
  173        | ','
  174        | ';'

  175 id_pattern: IDENT
  176           | '*'
  177           | id_pattern '.' IDENT
  178           | id_pattern '.' '*'

  179 exception_spec: '*' '.' class_id
  180               | class_id

  181 if_clause_opt: /* empty */
  182              | "if" _balanced_collect_mode TEXT

  183 watchpoint_spec: _break_mode suspend_policy watch_type class_id '.' IDENT
  184                | _break_mode suspend_policy watch_type '(' expr ')' _break_mode '.' IDENT

  185 watch_type: /* empty */
  186           | "all"
  187           | "access"

  188 suspend_policy: /* empty */
  189               | "go"
  190               | "thread"

  191 expr: _balanced_collect_mode TEXT

  192 _copy_two_back: /* empty */

  193 _default_mode: /* empty */

  194 _break_mode: /* empty */

  195 _print_mode: /* empty */

  196 _check_connect: /* empty */

  197 _balanced_collect_mode: /* empty */

  198 _collect_all_mode: /* empty */

  199 _run_args_mode: /* empty */


Terminals, with rules where they appear

$end (0) 0
'&' (38) 147
'(' (40) 57 151 152 184
')' (41) 57 151 152 184
'*' (42) 166 176 178 179
'+' (43) 81
',' (44) 154 173
'.' (46) 121 158 159 164 166 168 177 178 179 183 184
'/' (47) 10 11 31 32
':' (58) 6 160 165
';' (59) 174
'<' (60) 145
'>' (62) 146 147
error (256)
WORD (258) 6 10 14 18 28 31 40 42 93 103 108 110 114 117 125 141 142
    145 146 147 149
TEXT (259) 40 44 57 58 112 126 182 191
INTLIT (260) 21 127 129 131 135
CHARLIT (261)
STRINGLIT (262)
IDENT (263) 119 120 121 134 157 158 159 164 166 167 168 175 177 183
    184
"run" (264) 2 4 99
"attach" (265) 5
"connect" (266) 6
"listen" (267) 7
"detach" (268) 8
"print" (269) 9 10 11 33 34 35 36
"call" (270) 12
"exec-class" (271) 13 14
"exec-args" (272) 15 17
"backtrace" (273) 18 19 20
"all" (274) 20 23 89 97 105 186
"wherei" (275) 21 22 23
"up" (276) 24 72
"down" (277) 25
"frame" (278) 26
"save" (279) 27 28
"ptype" (280) 29
"dumpall" (281) 30 31 32
"set" (282) 33 34 35 36 37 38 39 40
"compressed" (283) 33
"pretty" (284) 34
"elements" (285) 35
"max-frames" (286) 36
"stdin" (287) 37 38
"on" (288) 37
"off" (289) 38
"variable" (290) 39
"thread" (291) 41 190
"threadgroup" (292) 42
"^F" (293) 43 44
"suspend" (294) 45 46
"resume" (295) 47 48
"kill" (296) 49
"interrupt" (297) 50 51
"break" (298) 52 53 100
"clear" (299) 54
"command" (300) 55 56
"condition" (301) 57 58
"catch" (302) 59 60 102
"pass" (303) 61 62
"watch" (304) 63 101
"unwatch" (305) 64 65
"delete" (306) 66 67
"ignore" (307) 68
"trace" (308) 69 70
"methods" (309) 69 70 71 90
"untrace" (310) 71
"step" (311) 72 73
"finish" (312) 74
"next" (313) 75
"stepi" (314) 76
"continue" (315) 77
"exclude" (316) 78 79 80 81 82
"none" (317) 79
"reset" (318) 80
"lock" (319) 83
"disablegc" (320) 84
"enablegc" (321) 85
"info" (322) 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102
    103 104 105
"locals" (323) 86
"classes" (324) 87
"class" (325) 88 89
"fields" (326) 91
"threads" (327) 92 93
"threadgroups" (328) 94
"classpath" (329) 95 107 108
"threadlocks" (330) 96 97 98
"stack" (331) 103 104 105
"loadclass" (332) 106
"sourcepath" (333) 109 110
"monitor" (334) 111 112
"unmonitor" (335) 113
"source" (336) 114
"list" (337) 115 116 117
"lines" (338) 118 119
"bytecodes" (339) 120 121
"version" (340) 122
"quit" (341) 123
"help" (342) 124 125
"[]" (343) 156
".0" (344) 169
"if" (345) 182
"access" (346) 187
"go" (347) 189


Nonterminals, with rules where they appear

$accept (105)
    on left: 0
start (106)
    on left: 1, on right: 0
command (107)
    on left: 2 4 5 6 7 8 9 10 11 12 13 14 15 17 18 19 20 21 22 23 24
    25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45
    46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66
    67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87
    88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106
    107 108 109 110 111 112 113 114 115 116 117 118 119 120 121 122
    123 124 125 126, on right: 1
@1 (108)
    on left: 3, on right: 4
@2 (109)
    on left: 16, on right: 17
intlit (110)
    on left: 127, on right: 11 26 32 35 36 56 58 68 113 116 126 132
    133 138 160 163 165
intlit_dflt1 (111)
    on left: 128 129, on right: 24 25 73 75 76
intlit_dflt_m1 (112)
    on left: 130 131, on right: 139
int_list (113)
    on left: 132 133, on right: 67 133
thread_id (114)
    on left: 134 135, on right: 41 49 51 70 98 136 137
thread_id_list (115)
    on left: 136 137, on right: 46 48 137
address (116)
    on left: 138, on right: 5
address_opt (117)
    on left: 139, on right: 7
run_args (118)
    on left: 140 141 142, on right: 4 17 142
file_specs (119)
    on left: 143 144, on right: 140 144
file_spec (120)
    on left: 145 146 147, on right: 143 144
connector_args (121)
    on left: 148 149, on right: 6
formal_types_opt (122)
    on left: 150 151 152, on right: 159 164
formal_types (123)
    on left: 153 154, on right: 151 154
formal_type (124)
    on left: 155 156, on right: 153 154 156
class_id (125)
    on left: 157 158, on right: 88 89 90 91 106 118 119 120 121 155
    158 179 180 183
breakpoint_spec (126)
    on left: 159 160, on right: 53
delete_breakpoint_spec_list (127)
    on left: 161 162, on right: 54 162
delete_breakpoint_spec (128)
    on left: 163 164 165, on right: 161 162
break_class_id (129)
    on left: 166 167 168 169, on right: 159 160 164 165 168 169
exclude_class_id_list (130)
    on left: 170 171, on right: 81 82 171
opt_sep (131)
    on left: 172 173 174, on right: 171
id_pattern (132)
    on left: 175 176 177 178, on right: 170 171 177 178
exception_spec (133)
    on left: 179 180, on right: 60 62
if_clause_opt (134)
    on left: 181 182, on right: 159 160
watchpoint_spec (135)
    on left: 183 184, on right: 63 65
watch_type (136)
    on left: 185 186 187, on right: 183 184
suspend_policy (137)
    on left: 188 189 190, on right: 69 70 183 184
expr (138)
    on left: 191, on right: 9 10 11 12 28 29 30 31 32 39 49 83 84 85
    184
_copy_two_back (139)
    on left: 192, on right: 142
_default_mode (140)
    on left: 193, on right: 88 89
_break_mode (141)
    on left: 194, on right: 52 53 54 59 60 61 62 64 79 80 81 82 88
    89 90 91 106 115 118 119 120 121 183 184
_print_mode (142)
    on left: 195, on right: 9 10 11 30 31 32
_check_connect (143)
    on left: 196, on right: 18 19 20 21 22 23 24 25 26 41 42 45 46
    47 48 50 51 69 70 71 72 73 74 75 76 77 83 84 85 86 88 89 92 93
    94 95 96 97 98 103 104 105 106 120 121
_balanced_collect_mode (144)
    on left: 197, on right: 57 58 111 112 182 191
_collect_all_mode (145)
    on left: 198, on right: 40 43 44 126
_run_args_mode (146)
    on left: 199, on right: 2 4 15 17 107 108 109 110 114


state 0

    0 $accept: . start $end

    INTLIT         shift, and go to state 1
    "run"          shift, and go to state 2
    "attach"       shift, and go to state 3
    "connect"      shift, and go to state 4
    "listen"       shift, and go to state 5
    "detach"       shift, and go to state 6
    "print"        shift, and go to state 7
    "call"         shift, and go to state 8
    "exec-class"   shift, and go to state 9
    "exec-args"    shift, and go to state 10
    "backtrace"    shift, and go to state 11
    "wherei"       shift, and go to state 12
    "up"           shift, and go to state 13
    "down"         shift, and go to state 14
    "frame"        shift, and go to state 15
    "save"         shift, and go to state 16
    "ptype"        shift, and go to state 17
    "dumpall"      shift, and go to state 18
    "set"          shift, and go to state 19
    "thread"       shift, and go to state 20
    "threadgroup"  shift, and go to state 21
    "^F"           shift, and go to state 22
    "suspend"      shift, and go to state 23
    "resume"       shift, and go to state 24
    "kill"         shift, and go to state 25
    "interrupt"    shift, and go to state 26
    "break"        shift, and go to state 27
    "clear"        shift, and go to state 28
    "command"      shift, and go to state 29
    "condition"    shift, and go to state 30
    "catch"        shift, and go to state 31
    "pass"         shift, and go to state 32
    "watch"        shift, and go to state 33
    "unwatch"      shift, and go to state 34
    "delete"       shift, and go to state 35
    "ignore"       shift, and go to state 36
    "trace"        shift, and go to state 37
    "untrace"      shift, and go to state 38
    "step"         shift, and go to state 39
    "finish"       shift, and go to state 40
    "next"         shift, and go to state 41
    "stepi"        shift, and go to state 42
    "continue"     shift, and go to state 43
    "exclude"      shift, and go to state 44
    "lock"         shift, and go to state 45
    "disablegc"    shift, and go to state 46
    "enablegc"     shift, and go to state 47
    "info"         shift, and go to state 48
    "classpath"    shift, and go to state 49
    "loadclass"    shift, and go to state 50
    "sourcepath"   shift, and go to state 51
    "monitor"      shift, and go to state 52
    "unmonitor"    shift, and go to state 53
    "source"       shift, and go to state 54
    "list"         shift, and go to state 55
    "lines"        shift, and go to state 56
    "bytecodes"    shift, and go to state 57
    "version"      shift, and go to state 58
    "quit"         shift, and go to state 59
    "help"         shift, and go to state 60

    start    go to state 61
    command  go to state 62
    intlit   go to state 63


state 1

  127 intlit: INTLIT .

    $default  reduce using rule 127 (intlit)


state 2

    2 command: "run" . _run_args_mode
    4        | "run" . _run_args_mode @1 run_args

    $default  reduce using rule 199 (_run_args_mode)

    _run_args_mode  go to state 64


state 3

    5 command: "attach" . address

    INTLIT  shift, and go to state 1

    intlit   go to state 65
    address  go to state 66


state 4

    6 command: "connect" . WORD ':' connector_args

    WORD  shift, and go to state 67


state 5

    7 command: "listen" . address_opt

    INTLIT  shift, and go to state 68

    $default  reduce using rule 130 (intlit_dflt_m1)

    intlit_dflt_m1  go to state 69
    address_opt     go to state 70


state 6

    8 command: "detach" .

    $default  reduce using rule 8 (command)


state 7

    9 command: "print" . _print_mode expr
   10        | "print" . _print_mode '/' WORD expr
   11        | "print" . _print_mode '/' intlit expr

    $default  reduce using rule 195 (_print_mode)

    _print_mode  go to state 71


state 8

   12 command: "call" . expr

    $default  reduce using rule 197 (_balanced_collect_mode)

    expr                    go to state 72
    _balanced_collect_mode  go to state 73


state 9

   13 command: "exec-class" .
   14        | "exec-class" . WORD

    WORD  shift, and go to state 74

    $default  reduce using rule 13 (command)


state 10

   15 command: "exec-args" . _run_args_mode
   17        | "exec-args" . _run_args_mode @2 run_args

    $default  reduce using rule 199 (_run_args_mode)

    _run_args_mode  go to state 75


state 11

   18 command: "backtrace" . WORD _check_connect
   19        | "backtrace" . _check_connect
   20        | "backtrace" . "all" _check_connect

    WORD   shift, and go to state 76
    "all"  shift, and go to state 77

    $default  reduce using rule 196 (_check_connect)

    _check_connect  go to state 78


state 12

   21 command: "wherei" . INTLIT _check_connect
   22        | "wherei" . _check_connect
   23        | "wherei" . "all" _check_connect

    INTLIT  shift, and go to state 79
    "all"   shift, and go to state 80

    $default  reduce using rule 196 (_check_connect)

    _check_connect  go to state 81


state 13

   24 command: "up" . intlit_dflt1 _check_connect

    INTLIT  shift, and go to state 82

    $default  reduce using rule 128 (intlit_dflt1)

    intlit_dflt1  go to state 83


state 14

   25 command: "down" . intlit_dflt1 _check_connect

    INTLIT  shift, and go to state 82

    $default  reduce using rule 128 (intlit_dflt1)

    intlit_dflt1  go to state 84


state 15

   26 command: "frame" . intlit _check_connect

    INTLIT  shift, and go to state 1

    intlit  go to state 85


state 16

   27 command: "save" .
   28        | "save" . WORD expr

    WORD  shift, and go to state 86

    $default  reduce using rule 27 (command)


state 17

   29 command: "ptype" . expr

    $default  reduce using rule 197 (_balanced_collect_mode)

    expr                    go to state 87
    _balanced_collect_mode  go to state 73


state 18

   30 command: "dumpall" . _print_mode expr
   31        | "dumpall" . _print_mode '/' WORD expr
   32        | "dumpall" . _print_mode '/' intlit expr

    $default  reduce using rule 195 (_print_mode)

    _print_mode  go to state 88


state 19

   33 command: "set" . "print" "compressed"
   34        | "set" . "print" "pretty"
   35        | "set" . "print" "elements" intlit
   36        | "set" . "print" "max-frames" intlit
   37        | "set" . "stdin" "on"
   38        | "set" . "stdin" "off"
   39        | "set" . "variable" expr
   40        | "set" . WORD _collect_all_mode TEXT

    WORD        shift, and go to state 89
    "print"     shift, and go to state 90
    "stdin"     shift, and go to state 91
    "variable"  shift, and go to state 92


state 20

   41 command: "thread" . thread_id _check_connect

    INTLIT  shift, and go to state 93
    IDENT   shift, and go to state 94

    thread_id  go to state 95


state 21

   42 command: "threadgroup" . WORD _check_connect

    WORD  shift, and go to state 96


state 22

   43 command: "^F" . _collect_all_mode
   44        | "^F" . _collect_all_mode TEXT

    $default  reduce using rule 198 (_collect_all_mode)

    _collect_all_mode  go to state 97


state 23

   45 command: "suspend" . _check_connect
   46        | "suspend" . thread_id_list _check_connect

    INTLIT  shift, and go to state 93
    IDENT   shift, and go to state 94

    $default  reduce using rule 196 (_check_connect)

    thread_id       go to state 98
    thread_id_list  go to state 99
    _check_connect  go to state 100


state 24

   47 command: "resume" . _check_connect
   48        | "resume" . thread_id_list _check_connect

    INTLIT  shift, and go to state 93
    IDENT   shift, and go to state 94

    $default  reduce using rule 196 (_check_connect)

    thread_id       go to state 98
    thread_id_list  go to state 101
    _check_connect  go to state 102


state 25

   49 command: "kill" . thread_id expr

    INTLIT  shift, and go to state 93
    IDENT   shift, and go to state 94

    thread_id  go to state 103


state 26

   50 command: "interrupt" . _check_connect
   51        | "interrupt" . thread_id _check_connect

    INTLIT  shift, and go to state 93
    IDENT   shift, and go to state 94

    $default  reduce using rule 196 (_check_connect)

    thread_id       go to state 104
    _check_connect  go to state 105


state 27

   52 command: "break" . _break_mode
   53        | "break" . _break_mode breakpoint_spec

    $default  reduce using rule 194 (_break_mode)

    _break_mode  go to state 106


state 28

   54 command: "clear" . _break_mode delete_breakpoint_spec_list

    $default  reduce using rule 194 (_break_mode)

    _break_mode  go to state 107


state 29

   55 command: "command" .
   56        | "command" . intlit

    INTLIT  shift, and go to state 1

    $default  reduce using rule 55 (command)

    intlit  go to state 108


state 30

   57 command: "condition" . '(' _balanced_collect_mode TEXT ')'
   58        | "condition" . intlit _balanced_collect_mode TEXT

    INTLIT  shift, and go to state 1
    '('     shift, and go to state 109

    intlit  go to state 110


state 31

   59 command: "catch" . _break_mode
   60        | "catch" . _break_mode exception_spec

    $default  reduce using rule 194 (_break_mode)

    _break_mode  go to state 111


state 32

   61 command: "pass" . _break_mode
   62        | "pass" . _break_mode exception_spec

    $default  reduce using rule 194 (_break_mode)

    _break_mode  go to state 112


state 33

   63 command: "watch" . watchpoint_spec

    $default  reduce using rule 194 (_break_mode)

    watchpoint_spec  go to state 113
    _break_mode      go to state 114


state 34

   64 command: "unwatch" . _break_mode
   65        | "unwatch" . watchpoint_spec

    $default  reduce using rule 194 (_break_mode)

    watchpoint_spec  go to state 115
    _break_mode      go to state 116


state 35

   66 command: "delete" .
   67        | "delete" . int_list

    INTLIT  shift, and go to state 1

    $default  reduce using rule 66 (command)

    intlit    go to state 117
    int_list  go to state 118


state 36

   68 command: "ignore" . intlit intlit

    INTLIT  shift, and go to state 1

    intlit  go to state 119


state 37

   69 command: "trace" . _check_connect suspend_policy "methods"
   70        | "trace" . _check_connect suspend_policy "methods" thread_id

    $default  reduce using rule 196 (_check_connect)

    _check_connect  go to state 120


state 38

   71 command: "untrace" . _check_connect "methods"

    $default  reduce using rule 196 (_check_connect)

    _check_connect  go to state 121


state 39

   72 command: "step" . _check_connect "up"
   73        | "step" . _check_connect intlit_dflt1

    $default  reduce using rule 196 (_check_connect)

    _check_connect  go to state 122


state 40

   74 command: "finish" . _check_connect

    $default  reduce using rule 196 (_check_connect)

    _check_connect  go to state 123


state 41

   75 command: "next" . _check_connect intlit_dflt1

    $default  reduce using rule 196 (_check_connect)

    _check_connect  go to state 124


state 42

   76 command: "stepi" . _check_connect intlit_dflt1

    $default  reduce using rule 196 (_check_connect)

    _check_connect  go to state 125


state 43

   77 command: "continue" . _check_connect

    $default  reduce using rule 196 (_check_connect)

    _check_connect  go to state 126


state 44

   78 command: "exclude" .
   79        | "exclude" . _break_mode "none"
   80        | "exclude" . _break_mode "reset"
   81        | "exclude" . _break_mode '+' exclude_class_id_list
   82        | "exclude" . _break_mode exclude_class_id_list

    $end      reduce using rule 78 (command)
    $default  reduce using rule 194 (_break_mode)

    _break_mode  go to state 127


state 45

   83 command: "lock" . _check_connect expr

    $default  reduce using rule 196 (_check_connect)

    _check_connect  go to state 128


state 46

   84 command: "disablegc" . _check_connect expr

    $default  reduce using rule 196 (_check_connect)

    _check_connect  go to state 129


state 47

   85 command: "enablegc" . _check_connect expr

    $default  reduce using rule 196 (_check_connect)

    _check_connect  go to state 130


state 48

   86 command: "info" . "locals" _check_connect
   87        | "info" . "classes"
   88        | "info" . "class" _break_mode _check_connect class_id _default_mode
   89        | "info" . "class" _break_mode _check_connect class_id _default_mode "all"
   90        | "info" . "methods" _break_mode class_id
   91        | "info" . "fields" _break_mode class_id
   92        | "info" . "threads" _check_connect
   93        | "info" . "threads" _check_connect WORD
   94        | "info" . "threadgroups" _check_connect
   95        | "info" . "classpath" _check_connect
   96        | "info" . "threadlocks" _check_connect
   97        | "info" . "threadlocks" _check_connect "all"
   98        | "info" . "threadlocks" _check_connect thread_id
   99        | "info" . "run"
  100        | "info" . "break"
  101        | "info" . "watch"
  102        | "info" . "catch"
  103        | "info" . "stack" WORD _check_connect
  104        | "info" . "stack" _check_connect
  105        | "info" . "stack" "all" _check_connect

    "run"           shift, and go to state 131
    "break"         shift, and go to state 132
    "catch"         shift, and go to state 133
    "watch"         shift, and go to state 134
    "methods"       shift, and go to state 135
    "locals"        shift, and go to state 136
    "classes"       shift, and go to state 137
    "class"         shift, and go to state 138
    "fields"        shift, and go to state 139
    "threads"       shift, and go to state 140
    "threadgroups"  shift, and go to state 141
    "classpath"     shift, and go to state 142
    "threadlocks"   shift, and go to state 143
    "stack"         shift, and go to state 144


state 49

  107 command: "classpath" . _run_args_mode
  108        | "classpath" . _run_args_mode WORD

    $default  reduce using rule 199 (_run_args_mode)

    _run_args_mode  go to state 145


state 50

  106 command: "loadclass" . _break_mode _check_connect class_id

    $default  reduce using rule 194 (_break_mode)

    _break_mode  go to state 146


state 51

  109 command: "sourcepath" . _run_args_mode
  110        | "sourcepath" . _run_args_mode WORD

    $default  reduce using rule 199 (_run_args_mode)

    _run_args_mode  go to state 147


state 52

  111 command: "monitor" . _balanced_collect_mode
  112        | "monitor" . _balanced_collect_mode TEXT

    $default  reduce using rule 197 (_balanced_collect_mode)

    _balanced_collect_mode  go to state 148


state 53

  113 command: "unmonitor" . intlit

    INTLIT  shift, and go to state 1

    intlit  go to state 149


state 54

  114 command: "source" . _run_args_mode WORD

    $default  reduce using rule 199 (_run_args_mode)

    _run_args_mode  go to state 150


state 55

  115 command: "list" . _break_mode
  116        | "list" . intlit
  117        | "list" . WORD

    WORD    shift, and go to state 151
    INTLIT  shift, and go to state 1

    $default  reduce using rule 194 (_break_mode)

    intlit       go to state 152
    _break_mode  go to state 153


state 56

  118 command: "lines" . _break_mode class_id
  119        | "lines" . _break_mode class_id IDENT

    $default  reduce using rule 194 (_break_mode)

    _break_mode  go to state 154


state 57

  120 command: "bytecodes" . _break_mode _check_connect class_id IDENT
  121        | "bytecodes" . _break_mode _check_connect class_id '.' IDENT

    $default  reduce using rule 194 (_break_mode)

    _break_mode  go to state 155


state 58

  122 command: "version" .

    $default  reduce using rule 122 (command)


state 59

  123 command: "quit" .

    $default  reduce using rule 123 (command)


state 60

  124 command: "help" .
  125        | "help" . WORD

    WORD  shift, and go to state 156

    $default  reduce using rule 124 (command)


state 61

    0 $accept: start . $end

    $end  shift, and go to state 157


state 62

    1 start: command .

    $default  reduce using rule 1 (start)


state 63

  126 command: intlit . _collect_all_mode TEXT

    $default  reduce using rule 198 (_collect_all_mode)

    _collect_all_mode  go to state 158


state 64

    2 command: "run" _run_args_mode .
    4        | "run" _run_args_mode . @1 run_args

    $end      reduce using rule 2 (command)
    $default  reduce using rule 3 (@1)

    @1  go to state 159


state 65

  138 address: intlit .

    $default  reduce using rule 138 (address)


state 66

    5 command: "attach" address .

    $default  reduce using rule 5 (command)


state 67

    6 command: "connect" WORD . ':' connector_args

    ':'  shift, and go to state 160


state 68

  131 intlit_dflt_m1: INTLIT .

    $default  reduce using rule 131 (intlit_dflt_m1)


state 69

  139 address_opt: intlit_dflt_m1 .

    $default  reduce using rule 139 (address_opt)


state 70

    7 command: "listen" address_opt .

    $default  reduce using rule 7 (command)


state 71

    9 command: "print" _print_mode . expr
   10        | "print" _print_mode . '/' WORD expr
   11        | "print" _print_mode . '/' intlit expr

    '/'  shift, and go to state 161

    $default  reduce using rule 197 (_balanced_collect_mode)

    expr                    go to state 162
    _balanced_collect_mode  go to state 73


state 72

   12 command: "call" expr .

    $default  reduce using rule 12 (command)


state 73

  191 expr: _balanced_collect_mode . TEXT

    TEXT  shift, and go to state 163


state 74

   14 command: "exec-class" WORD .

    $default  reduce using rule 14 (command)


state 75

   15 command: "exec-args" _run_args_mode .
   17        | "exec-args" _run_args_mode . @2 run_args

    $end      reduce using rule 15 (command)
    $default  reduce using rule 16 (@2)

    @2  go to state 164


state 76

   18 command: "backtrace" WORD . _check_connect

    $default  reduce using rule 196 (_check_connect)

    _check_connect  go to state 165


state 77

   20 command: "backtrace" "all" . _check_connect

    $default  reduce using rule 196 (_check_connect)

    _check_connect  go to state 166


state 78

   19 command: "backtrace" _check_connect .

    $default  reduce using rule 19 (command)


state 79

   21 command: "wherei" INTLIT . _check_connect

    $default  reduce using rule 196 (_check_connect)

    _check_connect  go to state 167


state 80

   23 command: "wherei" "all" . _check_connect

    $default  reduce using rule 196 (_check_connect)

    _check_connect  go to state 168


state 81

   22 command: "wherei" _check_connect .

    $default  reduce using rule 22 (command)


state 82

  129 intlit_dflt1: INTLIT .

    $default  reduce using rule 129 (intlit_dflt1)


state 83

   24 command: "up" intlit_dflt1 . _check_connect

    $default  reduce using rule 196 (_check_connect)

    _check_connect  go to state 169


state 84

   25 command: "down" intlit_dflt1 . _check_connect

    $default  reduce using rule 196 (_check_connect)

    _check_connect  go to state 170


state 85

   26 command: "frame" intlit . _check_connect

    $default  reduce using rule 196 (_check_connect)

    _check_connect  go to state 171


state 86

   28 command: "save" WORD . expr

    $default  reduce using rule 197 (_balanced_collect_mode)

    expr                    go to state 172
    _balanced_collect_mode  go to state 73


state 87

   29 command: "ptype" expr .

    $default  reduce using rule 29 (command)


state 88

   30 command: "dumpall" _print_mode . expr
   31        | "dumpall" _print_mode . '/' WORD expr
   32        | "dumpall" _print_mode . '/' intlit expr

    '/'  shift, and go to state 173

    $default  reduce using rule 197 (_balanced_collect_mode)

    expr                    go to state 174
    _balanced_collect_mode  go to state 73


state 89

   40 command: "set" WORD . _collect_all_mode TEXT

    $default  reduce using rule 198 (_collect_all_mode)

    _collect_all_mode  go to state 175


state 90

   33 command: "set" "print" . "compressed"
   34        | "set" "print" . "pretty"
   35        | "set" "print" . "elements" intlit
   36        | "set" "print" . "max-frames" intlit

    "compressed"  shift, and go to state 176
    "pretty"      shift, and go to state 177
    "elements"    shift, and go to state 178
    "max-frames"  shift, and go to state 179


state 91

   37 command: "set" "stdin" . "on"
   38        | "set" "stdin" . "off"

    "on"   shift, and go to state 180
    "off"  shift, and go to state 181


state 92

   39 command: "set" "variable" . expr

    $default  reduce using rule 197 (_balanced_collect_mode)

    expr                    go to state 182
    _balanced_collect_mode  go to state 73


state 93

  135 thread_id: INTLIT .

    $default  reduce using rule 135 (thread_id)


state 94

  134 thread_id: IDENT .

    $default  reduce using rule 134 (thread_id)


state 95

   41 command: "thread" thread_id . _check_connect

    $default  reduce using rule 196 (_check_connect)

    _check_connect  go to state 183


state 96

   42 command: "threadgroup" WORD . _check_connect

    $default  reduce using rule 196 (_check_connect)

    _check_connect  go to state 184


state 97

   43 command: "^F" _collect_all_mode .
   44        | "^F" _collect_all_mode . TEXT

    TEXT  shift, and go to state 185
